# funathon2024_sujet2

./: .gitignore  .nojekyll  Exercices.ipynb  README  README.md  RTraffic.qmd  _quarto.yml  custom.scss  global.R  global_0.R  index.html  index.qmd  init.sh  pax_apt.R  pyproject.toml  requirements.txt  search.json  server-old.R  server.R  sources.yml  trame.qmd  ui.R
.github/workflows/: app.yaml  prod.yaml  shiny.yaml
R/: catalogue_data.R  clean_dataframe.R  create_data_list.R  divers_functions.R  figures.R  import_data.R  load_data.R
christophe/: creer_liste_donnees.R
correction/: app.py  exo6.py  global.R  sources.yml  ui.R
correction/R/: clean_dataframe.R  divers_functions.R  figures.R  import_data.R  simplify_text.R
correction/src/: clean_dataframe.py  create_data_list.py  divers_functions.py  figures.py  import_data.py
docker/: Dockerfile  Dockerfile_python
img/: environment.excalidraw  lien_perso.excalidraw  ui-r.excalidraw
intermediates/: exo2.R  exo2.py  exo3.R  exo3.py  exo3_final.py  exo4a.R  exo4a.py  exo4c.R  exo4c.py  exo5.R  exo5.py
intermediates/exo6/: global.R  server.R  ui.R
lucie/: clean_data_frame.R  create_data_list.R  global.R  import_data.R  main.R
old/: RTraffic.html  RTraffic.qmd  global-old.R
parts/: 01-intro.html  01-intro.qmd  02-recuperation.qmd  03-restaurer.qmd  99-exo1.qmd  99-exo2.qmd  99-exo3.qmd  99-exo4.qmd  99-exo5.qmd  99-exo6.qmd  99-exo7.qmd
renv/: activate.R
site_libs/bootstrap/: bootstrap.min.css  (+1 more)
src/: clean_dataframe.py  divers_functions.py  figures.py  import_data.py  tables.py
(+5 files in other folders)
