[project]
name = "funathon2024-sujet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "great-tables>=0.21.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "plotnine>=0.15.3",
    "pyyaml>=6.0.3",
    "streamlit>=1.55.0",
    "streamlit-folium>=0.26.2",
]
